--- a/Jednoręki bandyta/index.html
+++ b/Jednoręki bandyta/index.html
@@ -29,7 +29,9 @@
             <span class="result"></span>Za tobą <span class="number"></span> gier, w tym <span class="win"></span> wygranych i <span class="loss"></span> przegranych.
             </section>
     </div>
-<script src=""></script>
+<script src="Wallet.js"></script>
+<script src="Game.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
