--- a/Jednoręki bandyta/index.html
+++ b/Jednoręki bandyta/index.html
@@ -26,14 +26,16 @@
         <section class="panel">TWOJE ŚRODKI PRZED KOLEJNĄ GRĄ TO: <span class="wallet"></span></section>
 
         <section class="score">
-            <span class="result"></span>Za tobą <span class="number"></span> gier, w tym <span class="win"></span> wygranych i <span class="loss"></span> przegranych.
-            </section>
+            <span class="result"></span>Za tobą <span class="number"></span> gier, w tym <span class="win"></span>
+            wygranych i <span class="loss"></span> przegranych.
+        </section>
     </div>
-<script src="Wallet.js"></script>
-<script src="Statistics.js"></script>
-<script src="Draw.js"></script>
-<script src="Game.js"></script>
-<script src="main.js"></script>
+    <script src="Wallet.js"></script>
+    <script src="Statistics.js"></script>
+    <script src="Draw.js"></script>
+    <script src="Result.js"></script>
+    <script src="Game.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
